# src/apiaries/dto/create-apiary.dto.ts
@@ -1,0 +1,14 @@
+import { IsString, IsOptional } from 'class-validator';
+
+export class CreateApiaryDto {
+  @IsString()
+  name: string;
+
+  @IsOptional()
+  @IsString()
+  description?: string;
+
+  @IsOptional()
+  @IsString()
+  color?: string;
+}
